src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Contact__c</fullName>
        <description>The person you contact at the clients location.</description>
        <label>Account Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetSize__c</fullName>
        <label>Asset Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_Sales_Assistant__c</fullName>
        <label>Assigned Sales Assistant</label>
        <picklist>
            <picklistValues>
                <fullName>Alex Lopez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marilyn Nunez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mauricio Safi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Avg_Number_of_Deals_you_Fund_Monthly__c</fullName>
        <label>Avg Number of Deals You Fund Monthly</label>
        <picklist>
            <picklistValues>
                <fullName>0-5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10-15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Back_End_Processor__c</fullName>
        <label>Back-End Processor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bank_Letter__c</fullName>
        <label>Bank Letter</label>
        <picklist>
            <picklistValues>
                <fullName>Send to partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send to merchant-no processor change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check with partner every time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send to merchant after partner provides new mid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression_Date__c</fullName>
        <description>Bonus Suppression for Partners (ISO Account) Date/Time Flagged as True</description>
        <label>Bonus Suppression Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Bonus_Suppression__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Bonus Suppression for Partners (ISO Account)</description>
        <label>Bonus Suppression</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessStage__c</fullName>
        <label>Business Stage</label>
        <picklist>
            <picklistValues>
                <fullName>High Growth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stable/Mature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preparing to Sell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Startup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessStructure__c</fullName>
        <label>Business Structure</label>
        <picklist>
            <picklistValues>
                <fullName>C-Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Partnership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proprietorship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S-Corporation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Limited Liability Partnership</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BusinessType__c</fullName>
        <label>Business Type</label>
        <picklist>
            <picklistValues>
                <fullName>Large Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Appliance Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Supply Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bakery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bar/Tavern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beauty/Nail/Spa Salon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bicycle Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Book Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camera Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Candy Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carwash</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caterer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cell Phone Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chiropractor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clothing Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computer and Software Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consignment/Second Hand Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenience Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dentist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drug and Vitamin Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drycleaner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronics/TV and Radio Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entertainment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Floor Covering Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florist</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Development_Process_Completed__c</fullName>
        <label>Business Development Process Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Calculator_Sent__c</fullName>
        <label>Calculator Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This partner account is associated with this campaign.</description>
        <inlineHelpText>This partner account is associated with this campaign.</inlineHelpText>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cash_Advance_Deals_Per_Month__c</fullName>
        <inlineHelpText>How many cash advance deals can the Potential Partner provide on a monthly basis?</inlineHelpText>
        <label>Cash Advance Deals Per Month</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Cash Brokers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier I Acquirer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier II Acquirers/ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier III Acquirers/ISO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier IV Aquirers/ISO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Claw_back_language__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Claw-back language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Branded_3_Minute_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co-Branded 3 Minute App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Branded_Fact_Sheet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Two page fact sheet.</description>
        <label>Co-Branded Fact Sheet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commission_Basis__c</fullName>
        <label>Commission Basis</label>
        <picklist>
            <picklistValues>
                <fullName>Payback Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advced Upfront / Payback Residual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commission_Schedule__c</fullName>
        <label>Commission Schedule</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitive_Pricing_Clause__c</fullName>
        <label>Competitive Pricing Clause</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <label>Contact Title</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Received_Signed__c</fullName>
        <label>Contract Received &amp; Signed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contract_Sent__c</fullName>
        <label>Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CrystalReports_com_Tutorial_Sent__c</fullName>
        <label>CrystalReports.com Tutorial Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Back_End_Processor__c</fullName>
        <inlineHelpText>What back-end processor does the company use for credit card settlement?  Business Development needs to identify the settlement solution that is best for the Potential Partner.</inlineHelpText>
        <label>Current Back-End Processor</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Balance__c</fullName>
        <label>Current Balance</label>
        <summarizedField>Opportunity.Remaining_Balance__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity.Advance_Payoff_Date__c</field>
            <operation>equals</operation>
            <value>1/1/1900</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Current_Opp_Stage__c</fullName>
        <label>Current Opp Stage</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_ROI__c</fullName>
        <label>Current ROI</label>
        <summarizedField>Opportunity.Current_ROI__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Remaining_Balance__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer_ID_as_Number_1__c</fullName>
        <formula>Customer_Identification_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customer ID as Number 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_ID_as_a_number__c</fullName>
        <description>Test Field to link with Rapidadvance Account Manager</description>
        <label>Customer ID as a number</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Identification_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>DBA__c</fullName>
        <inlineHelpText>&quot;Doing Business As&quot; Name</inlineHelpText>
        <label>DBA (if different from Account Name)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBNumber__c</fullName>
        <label>D&amp;B Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DBRating__c</fullName>
        <label>D&amp;B Rating</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateBusinessStarted__c</fullName>
        <label>Business Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Contract_Signed__c</fullName>
        <description>Date ISO signed contract</description>
        <label>Date Contract Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Do_You_Sell_Merchant_Processing__c</fullName>
        <label>Do You Sell Merchant Processing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Do_You_Work_With_Any_Other_AF_Companies__c</fullName>
        <label>Do You Work With Any Other AF Companies?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_the_Merchant_Own_the_Building__c</fullName>
        <label>Does the Merchant Own the Building?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Monthly_Sales__c</fullName>
        <formula>AnnualRevenue  / 12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Total Monthly Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusive__c</fullName>
        <inlineHelpText>Does the potential partner currently utilize other cash advance partners?</inlineHelpText>
        <label>Exclusive</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Executed_Contract_Sent__c</fullName>
        <label>Executed Contract Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FederalTaxID__c</fullName>
        <label>Federal Tax ID #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Federal_or_State_Tax_Liens__c</fullName>
        <label>Federal or State Tax Liens?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Funding_Date__c</fullName>
        <label>First Funding Date</label>
        <summarizedField>Opportunity.Funded_by_WC__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Flag_Account_for_Renewal__c</fullName>
        <formula>if( Most_Recent_Funded_Renewal_Date__c &lt; Most_Recent_Opp_Not_Processed__c ,0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flag Account for Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GoToMtg_Training_Complete__c</fullName>
        <label>GoToMtg Training Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GoToMtg_Training_Scheduled__c</fullName>
        <label>GoToMtg Training Scheduled</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GrossAnnualSales__c</fullName>
        <label>Gross Annual Sales</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>How_Did_You_Hear_About_Us__c</fullName>
        <label>How Did You Hear About Us</label>
        <picklist>
            <picklistValues>
                <fullName>Facebook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LinkedIn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Show</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twitter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_Many_Sales_Reps_Do_You_Have__c</fullName>
        <label>How Many Sales Reps Do You Have?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Other_Please_Explain__c</fullName>
        <label>If Other, Please Explain</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_So_Who_Do_You_Work_With__c</fullName>
        <label>If So, Who Do You Work With?</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>If_Yes_Please_Provide_Further_Details__c</fullName>
        <label>If Yes, Please Provide Further Details</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Independent_Sales_Rep__c</fullName>
        <label>Independent Sales Rep.</label>
        <picklist>
            <picklistValues>
                <fullName>Adrew Mahoney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Zimmerman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joe Pichert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robbie Nicholson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Individual_Email_Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Individual Email Result</label>
        <referenceTo>xtma_Individual_Email_Result__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Int_Industry__c</fullName>
        <description>Industry</description>
        <label>Industry</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvestmentType__c</fullName>
        <label>Investment Type</label>
        <picklist>
            <picklistValues>
                <fullName>Asset Management &amp; Trusts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brokerage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>College</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mutual Funds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annuity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Business_for_Sale__c</fullName>
        <label>Is Business for Sale?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_this_a_Retriever_ISO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this a Retriever ISO?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Name__c</fullName>
        <label>Landlord/Agent Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Landlord_Agent_Phone__c</fullName>
        <label>Landlord/Agent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Created_Opportunity__c</fullName>
        <label>Last Created Opportunity</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_Renewal_Date__c</fullName>
        <label>Last Renewal Date</label>
        <summarizedField>Opportunity.CreatedDate</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.Renewal__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Legal_Name__c</fullName>
        <label>Legal Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_Address__c</fullName>
        <label>Location 5 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_1_DBA_NAME__c</fullName>
        <label>Location 5 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Fax_Number__c</fullName>
        <label>Location 5 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Contact_Name__c</fullName>
        <label>Location 5 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_1_Landlord_Phone_Number__c</fullName>
        <label>Location 5 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_1_Phone_Number__c</fullName>
        <label>Location 5 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Address__c</fullName>
        <label>Location 2 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_2_DBA_NAME__c</fullName>
        <label>Location 2 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Fax_Number__c</fullName>
        <label>Location 2 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Contact_Name__c</fullName>
        <label>Location 2 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_2_Landlord_Phone_Number__c</fullName>
        <label>Location 2 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Phone_Number__c</fullName>
        <label>Location 2 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_2_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 2: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_3_Address__c</fullName>
        <label>Location 3 Address:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location_3_DBA_NAME__c</fullName>
        <label>Location 3 DBA NAME:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Fax_Number__c</fullName>
        <label>Location 3 Fax Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Contact_Name__c</fullName>
        <label>Location 3 Landlord Contact Name:</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_3_Landlord_Phone_Number__c</fullName>
        <label>Location 3 Landlord Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Phone_Number__c</fullName>
        <label>Location 3 Phone Number:</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_3_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 3: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_4_Time_Remaining_On_The_Lease__c</fullName>
        <label>Location 4: Time Remaining On The Lease</label>
        <picklist>
            <picklistValues>
                <fullName>1 - 6 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7 - 11 months</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 Years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 years +</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mailing_Address_For_Statements_etc__c</fullName>
        <description>Added per Earl and Karl.  This will be used for mailing purposed only and could be different for the actual retail location.</description>
        <label>Mailing Address (For Statements etc.)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Materials_Sent__c</fullName>
        <label>Marketing Materials Sent</label>
        <type>DateTime</type>
    </fields>
</CustomObject>